# talk-booking

.github/workflows/: build_python_ci_image  build_python_ci_image.yaml  deploy_docker_image.yaml  deploy_to_aws.yaml  destroy_development.yaml  destroy_production.yaml  destroy_vpc.yaml  dev_build_deploy_e2e.yaml  dev_quatilty_test.yaml  dev_terraform_destroy.yaml  dev_terraform_validate_deploy.yaml  prod_build_deploy.yaml  prod_terraform_validate_deploy.yaml  talk_booking_code_quality  talk_booking_code_quality.yaml  talk_booking_development_docker_image.yaml  talk_booking_quatilty_test.yaml  talk_booking_tests.yaml  talk_bookings_tests.yaml  terraform_deploy.yaml  terraform_deploy_destroy.yaml  vpc_destroy.yaml  (+10 more)
services/talk_booking/: .coveragerc  Dockerfile  config.py  deploy.py  migrations.py  pyproject.toml  update_dns.py
services/talk_booking/ci_cd/python/: Dockerfile
services/talk_booking/migrations/: env.py
services/talk_booking/migrations/versions/: 357a8cccf774_initial_migration.py
services/talk_booking/models/: __init__.py  address.py  api_requests.py  api_responses.py  requests.py  responses.py  talk_request.py
services/talk_booking/tests/: conftest.py  pytest.ini
services/talk_booking/tests/e2e/: test_accept_request_flow.py  test_health_check.py  test_reject_request_flow.py
services/talk_booking/tests/integration/test_database/: test_talk_request_db.py
services/talk_booking/tests/integration/test_web_app/: test_main.py
services/talk_booking/tests/unit/: test_models.py  test_talk_request.py
services/talk_booking/web_app/: config.py  main.py
(+20 files in other folders)
