[tool.poetry]
name = "talk_booking"
version = "0.1.0"
description = ""
authors = ["Ryan Bradshaw <ryan@rbradshaw.dev>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.73.0"
uvicorn = "^0.17.4"
sqlmodel = "^0.0.6"
pydantic = {extras = ["email"], version = "^1.9.0"}
alembic = "^1.7.7"
boto3 = "^1.21.21"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
black = "^22.1.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
bandit = "^1.7.2"
safety = "^1.10.3"
pytest-env = "^0.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
